fix obscure bug when a very long string inside transcript or translation would break the UI

--- a/jsapp/js/components/processing/singleProcessingRoute.module.scss
+++ b/jsapp/js/components/processing/singleProcessingRoute.module.scss
@@ -38,6 +38,7 @@ $s-single-processing-header: sizes.$x60;
   flex: 61;
   margin-right: sizes.$x16;
   padding-bottom: singleProcessingVariables.$s-single-processing-bottom-space;
+  max-width: 60vw; // ensure very long words don't murder the UI
 }
 
 .bottomRight {
@@ -47,4 +48,5 @@ $s-single-processing-header: sizes.$x60;
   flex-direction: column;
   height: 100%;
   padding-bottom: singleProcessingVariables.$s-single-processing-bottom-space;
+  min-width: 30vw; // ensure very long words don't murder the UI
 }
